zien24_implementation/org/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>CPQB__Annual_Recurring_Revenue__c</fullName>
        <inlineHelpText>The Annual Recurring Revenue for the Product Lines related to this Opportunity. If products are based on Daily prices, then the Daily price will be converted to a Yearly price using 365 days and then ARR will be calculated based on that Yearly price</inlineHelpText>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Schedule</label>
        <referenceTo>CPQB__Billing_Schedule__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Start_Date_Source__c</fullName>
        <label>Billing Start Date Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CPQB__Billing_Start_Date_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQB__Is_using_Price_Recurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not this Opportunity Line Item is using a Product with a Price Recurrence</inlineHelpText>
        <label>Is using Price Recurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQB__Monthly_Recurring_Revenue__c</fullName>
        <inlineHelpText>The Monthly Recurring Revenue for the Product Lines related to this Opportunity. If products are based on Daily prices, then the Daily price will be converted to a Yearly price (using 365 days) and then MRR will be calculated as 1/12 of that Yearly Price</inlineHelpText>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQB__One_Off_Revenue__c</fullName>
        <label>One Off Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQB__Order_End_Date__c</fullName>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQB__Order_Start_Date_Source__c</fullName>
        <label>Order Start Date Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CPQB__Order_Start_Date_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Order_Start_Date__c</fullName>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQB__Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <referenceTo>CPQB__Payment_Terms__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQB__Terms__c</fullName>
        <label>Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Total_Recurring_Revenue__c</fullName>
        <inlineHelpText>The total Recurring Revenue for this line, from Order Start Date until Order End Date</inlineHelpText>
        <label>Total Recurring Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Total_Revenue__c</fullName>
        <formula>CPQB__One_Off_Revenue__c +  CPQB__Total_Recurring_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Total Revenue, including One Off and Total Recurring Revenue</inlineHelpText>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQB__Upfront_Billing_Window_in_Months__c</fullName>
        <formula>CPQB__Billing_Schedule__r.CPQB__Upfront_Billing_Window_in_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upfront Billing Window in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Opportunityproduct</relationshipLabel>
        <relationshipName>Opportunityproduct</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>